--- a/static/index.html
+++ b/static/index.html
@@ -88,6 +88,9 @@
                 <span id="stat-learning" class="font-mono font-bold text-amber-400">0</span>
             </div>
             <div class="ml-auto flex items-center gap-2">
+                <a href="/live" target="_blank" class="text-zinc-500 hover:text-green-400 text-xs transition flex items-center gap-1">
+                    🛒 Live App
+                </a>
                 <button onclick="fetchVoiceSummary()" class="text-zinc-500 hover:text-purple-400 text-xs transition flex items-center gap-1">
                     🔊 Voice Summary
                 </button>
