feat: team auth, role-based approvals, bug tracking, clearance reports, analytics, e-commerce shop
Major features:
- Email/password login (Bhumika/Yash/Shweta, pw: 1234)
- Role hierarchy: Junior Dev → Senior Dev → Team Lead
- BLOCKER bugs require Team Lead approval only
- Bug tracking: reported_by, assigned_to, cleared_by, timestamps
- Auto clearance reports sent to highest authority (Shweta)
- Analytics dashboard with severity breakdown, team performance
- Team page with role permissions matrix
- Reports tab with full clearance reports
- Notifications panel with bell badge
- E-commerce shop (/shop) with cart, checkout, real-time order placement
- POST proxy for orders/checkout through Blaxel sandbox
- Live app auto-refreshes every 5s
- Impact analysis for all fault types
- Role-based action buttons (disabled approve for insufficient role)

--- a/static/live.html
+++ b/static/live.html
@@ -369,9 +369,14 @@
 
     // ─── Init ───────────────────────────────────────────────────────
     loadAll();
+    // Auto-refresh all data every 5 seconds for real-time updates
     setInterval(async () => {
         const h = await fetchJSON('health');
         updateHealthDot(h);
+        fetchEndpoint('products');
+        fetchEndpoint('orders');
+        fetchEndpoint('analytics');
+        fetchEndpoint('users');
     }, 5000);
     </script>
 </body>
